# model2code

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: deploy.yml
build-portable/: Makefile  model2code
code/: CMakeLists.txt
code/include/: Data.h  ExtractFromElement.h  ExtractFromXML.h  Generator.h  Replacer.h  Translator.h  strManipulation.h  utils.h
code/src/: Data.cpp  ExtractFromElement.cpp  ExtractFromXML.cpp  Generator.cpp  Replacer.cpp  Translator.cpp  main.cpp  strManipulation.cpp  utils.cpp
docs/: Makefile  README.md  requirements.txt
docs/source/: Doxyfile  Doxyfile.in  api.rst  conf.py  index.rst  tutorials.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
include/: Data.h  ExtractFromXML.h  Replacer.h  Translator.h  strManipulation.h
python/: data.py  extract_from_element.py  extract_from_xml.py  main.py  replacer.py  str_manipulation.py  translator.py
scripts/: build_portable.sh
src/: Data.cpp  ExtractFromElement.cpp  ExtractFromXML.cpp  Replacer.cpp  Translator.cpp  main.cpp  strManipulation.cpp
template_skill/: CMakeLists.txt  package.xml
template_skill/include/: TemplateSkill.h  TemplateSkillDataModel.h
template_skill/src/: TemplateSkill.cpp  TemplateSkillDataModel.cpp  main.cpp
templates/skills/first_template_skill/: CMakeLists.txt  package.xml
templates/skills/first_template_skill/include/: FirstTemplateSkill.h  GoToCurrentPoiSkill.h
templates/skills/first_template_skill/src/: FirstTemplateSkill.cpp  FirstTemplateSkillSM.scxml  GoToCurrentPoiSkill.cpp  ProvaSkillSM.scxml  main.cpp
templates/skills/second_template_skill/include/: SecondTemplateSkill.h
templates/skills/second_template_skill/src/: SecondTemplateSkill.cpp  SecondTemplateSkillSM.scxml
templates/skills/template_skill/: CMakeLists.txt  package.xml
templates/skills/template_skill/include/: TemplateSkill.h
templates/skills/template_skill/src/: TemplateSkill.cpp
templates/specifications/: full-model.xml  interfaces.xml
tests/: test.sh
tests/correct_skills/alarm_battery_low_skill/include/: AlarmBatteryLowSkill.h
tests/correct_skills/alarm_battery_low_skill/src/: AlarmBatteryLowSkill.cpp
tests/correct_skills/are_people_present_skill/src/: ArePeoplePresentSkill.cpp  ArePeoplePresentSkillSM.scxml
tests/correct_skills/battery_level_skill/src/: BatteryLevelSkill.cpp  (+1 more)
tests/hl_scxml/: ArePeoplePresentSkill.scxml  BatteryLevelSkill.scxml  CheckIfFirstPoiSkill.scxml  GoToPoiActionSkill.scxml  HardwareFaultSkill.scxml  IsTimerDoneSkill.scxml  NotifyChargedSkill.scxml  StopServiceSkill.scxml  VisitorsFollowingRobotSkill.scxml
tests/misc/: check_license.pl
tutorials/skills/second_tutorial_skill/: CMakeLists.txt  package.xml
tutorials/specifications/: interfaces.xml
workflows/: deploy.yml
(+8 files in other folders)
